--- a/pom.xml
+++ b/pom.xml
@@ -11,21 +11,9 @@
 	<groupId>com.poc</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>product-catalog</name>
-	<description>Demo project for Spring Boot</description>
+	<name>productCatalog</name>
+	<description>Demo project</description>
 	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
